add signle product mobile layout

--- a/src/scss/components/index.scss
+++ b/src/scss/components/index.scss
@@ -13,6 +13,8 @@
 @import './section.scss';
 @import './cards.scss';
 @import './range-slider.scss';
+@import './feedback.scss';
+@import './tooltip.scss';
 
 /* Blog */
 @import './blog.scss';
