--- a/src/scss/shop/sections/catalog-controls.scss
+++ b/src/scss/shop/sections/catalog-controls.scss
@@ -2,13 +2,20 @@
     position: fixed;
     top: 0;
     right: -100%;
-    padding: 39px 16px 20px;
+    padding: 39px 6px 20px 16px;
     width: 85%;
     height: 100vh;
     background-color: #fff;
     opacity: 0;
     z-index: -1;
     transition: all ease-out .3s;
+
+    .bar__body {
+        padding-right: 10px;
+        max-height: calc(100vh - 120px);
+        overflow-x: hidden;
+        overflow-y: scroll;
+    }
 
 
     .btn-close  {
