--- a/src/scss/components/product-tips.scss
+++ b/src/scss/components/product-tips.scss
@@ -11,6 +11,7 @@
     line-height: 16px;
     color: #FFFFFF;
     background-color: #DB2629;
+    z-index: 10;
 }
 
 .new::before {
@@ -26,4 +27,5 @@
     line-height: 16px;
     color: #FFFFFF;
     background-color: #32C45B;
+    z-index: 10;
 }
