--- a/src/scss/components/feedback.scss
+++ b/src/scss/components/feedback.scss
@@ -9,6 +9,20 @@
         margin-top: 90px;
         margin-bottom: 140px;
     }
+
+    @media screen and(max-width: 768px) {
+        .feedback__title {
+            margin-bottom: 16px;
+            font-weight: 600;
+            font-size: 20px;
+            line-height: 150%;
+            color: #000000;
+        }
+
+        .btn-leave-comment {
+            margin-bottom: 32px;
+        }
+    }
 }
 
 
