--- a/src/scss/components/select.scss
+++ b/src/scss/components/select.scss
@@ -7,7 +7,7 @@
         top: 18px;
 
         .line--dark:nth-child(2) {
-            transform: rotate(45deg) translateX(-6px);
+            //transform: rotate(45deg) translateX(-6px);
         }
     }
 
