add blog, post, login, register pages, cooperation

--- a/src/scss/index.scss
+++ b/src/scss/index.scss
@@ -6,3 +6,10 @@
 
 /* Shop */
 @import './shop/main.scss';
+
+/* Blog */
+@import './blog/main.scss';
+
+/* Account */
+
+@import './account/main.scss';
