--- a/src/scss/pages/index.scss
+++ b/src/scss/pages/index.scss
@@ -6,3 +6,4 @@
 @import './chooseFormPage.scss';
 @import './chooseSizePage.scss';
 @import './choosePackage.scss';
+@import './cooperationPage.scss';
