--- a/src/scss/components/icons.scss
+++ b/src/scss/components/icons.scss
@@ -91,3 +91,34 @@
     background-image: url("data:image/svg+xml,%3Csvg width='8' height='8' viewBox='0 0 8 8' fill='none' xmlns='http://www.w3.org/2000/svg'%3E%3Cpath d='M6.5 1.5L1.5 6.5M1.5 1.5L6.5 6.5' stroke='white' stroke-width='1.5' stroke-linecap='round' stroke-linejoin='round'/%3E%3Cpath d='M6.5 1.5L1.5 6.5M1.5 1.5L6.5 6.5' stroke='url(%23paint0_linear)' stroke-width='1.5' stroke-linecap='round' stroke-linejoin='round'/%3E%3Cdefs%3E%3ClinearGradient id='paint0_linear' x1='4' y1='1.5' x2='4' y2='6.5' gradientUnits='userSpaceOnUse'%3E%3Cstop stop-color='white'/%3E%3Cstop offset='1' stop-color='white' stop-opacity='0'/%3E%3C/linearGradient%3E%3C/defs%3E%3C/svg%3E%0A");
     background-repeat: no-repeat;
 }
+
+.icon {
+    position: relative;
+    width: 20px;
+    height: 20px;
+}
+
+.icon-city::before,
+.icon-store::before,
+.icon-insta::before {
+    position: absolute;
+    content: "";
+    top: 50%;
+    left: 50%;
+    width: 20px;
+    height: 20px;
+    transform: translate(-50%, -50%);
+}
+
+.icon-city::before {
+    background-image: url("data:image/svg+xml,%3Csvg width='20' height='20' viewBox='0 0 20 20' fill='none' xmlns='http://www.w3.org/2000/svg'%3E%3Cpath d='M16.6654 8.63636C16.6654 13.4091 9.9987 17.5 9.9987 17.5C9.9987 17.5 3.33203 13.4091 3.33203 8.63636C3.33203 7.0089 4.03441 5.44809 5.28465 4.2973C6.53489 3.14651 8.23059 2.5 9.9987 2.5C11.7668 2.5 13.4625 3.14651 14.7127 4.2973C15.963 5.44809 16.6654 7.0089 16.6654 8.63636Z' stroke='%233B4857' stroke-width='1.5' stroke-linecap='round' stroke-linejoin='round'/%3E%3Cpath d='M10 10.8332C11.3807 10.8332 12.5 9.90043 12.5 8.74984C12.5 7.59924 11.3807 6.6665 10 6.6665C8.61929 6.6665 7.5 7.59924 7.5 8.74984C7.5 9.90043 8.61929 10.8332 10 10.8332Z' stroke='%233B4857' stroke-width='1.5' stroke-linecap='round' stroke-linejoin='round'/%3E%3C/svg%3E%0A");    background-repeat: no-repeat;
+
+}
+
+.icon-store {
+    background-image: url("data:image/svg+xml,%3Csvg width='20' height='20' viewBox='0 0 20 20' fill='none' xmlns='http://www.w3.org/2000/svg'%3E%3Cpath d='M6.25 2.5H7.91667M14.5833 2.5H12.9167M7.91667 2.5V7.70833C7.91667 8.51375 7.26375 9.16667 6.45833 9.16667H6.04167C5.46637 9.16667 5 9.63304 5 10.2083V10.2083C5 10.7836 5.46637 11.25 6.04167 11.25H10.4167M7.91667 2.5H12.9167M12.9167 2.5V7.70833C12.9167 8.51375 13.5696 9.16667 14.375 9.16667H14.7917C15.367 9.16667 15.8333 9.63304 15.8333 10.2083V10.2083C15.8333 10.7836 15.367 11.25 14.7917 11.25H10.4167M10.4167 11.25V17.5' stroke='%233B4857' stroke-width='1.5' stroke-linecap='round' stroke-linejoin='round'/%3E%3C/svg%3E");
+}
+
+.icon-insta::before {
+    background-image: url("data:image/svg+xml,%3Csvg width='20' height='20' viewBox='0 0 20 20' fill='none' xmlns='http://www.w3.org/2000/svg'%3E%3Cpath d='M14.168 1.6665H5.83464C3.53345 1.6665 1.66797 3.53198 1.66797 5.83317V14.1665C1.66797 16.4677 3.53345 18.3332 5.83464 18.3332H14.168C16.4692 18.3332 18.3346 16.4677 18.3346 14.1665V5.83317C18.3346 3.53198 16.4692 1.6665 14.168 1.6665Z' stroke='%233B4857' stroke-width='1.5' stroke-linecap='round' stroke-linejoin='round'/%3E%3Cpath d='M13.3337 9.47476C13.4366 10.1683 13.3181 10.8766 12.9952 11.4989C12.6723 12.1213 12.1614 12.6259 11.5351 12.9412C10.9088 13.2564 10.1991 13.3661 9.5069 13.2547C8.81468 13.1433 8.17521 12.8165 7.67944 12.3207C7.18367 11.825 6.85685 11.1855 6.74546 10.4933C6.63408 9.80106 6.74379 9.09134 7.05901 8.46507C7.37423 7.83881 7.8789 7.32788 8.50123 7.00496C9.12356 6.68205 9.83187 6.56359 10.5254 6.66643C11.2328 6.77133 11.8878 7.10098 12.3935 7.60668C12.8992 8.11239 13.2288 8.76733 13.3337 9.47476Z' stroke='%233B4857' stroke-width='1.5' stroke-linecap='round' stroke-linejoin='round'/%3E%3Cpath d='M14.582 5.4165H14.5904' stroke='%233B4857' stroke-width='1.5' stroke-linecap='round' stroke-linejoin='round'/%3E%3C/svg%3E%0A");
+}
