--- a/src/scss/components/modals.scss
+++ b/src/scss/components/modals.scss
@@ -245,7 +245,8 @@
 }
 
 .modal--cart,
-.modal--comment {
+.modal--comment,
+.modal--partners {
     padding: 20px 40px;
     position: fixed;
     top: 50%;
@@ -333,7 +334,8 @@
     }
 }
 
-.modal--comment {
+.modal--comment,
+.modal--partners {
     max-width: 524px;
     width: 100%;
 
@@ -391,31 +393,74 @@
         z-index: 1001;
     }
 }
-//
-//#icon-thank-you {
-//
-//    #star-1 {
-//        animation: starAnimation 2s infinite;
-//        transform-origin: 15px 10px;
-//    }
-//}
-//
-//@keyframes starAnimation {
-//    0% {
-//        //transform: scale(1);
-//        opacity: 1;
-//        transform: rotate(0);
-//    }
-//
-//    50% {
-//        //transform: scale(0);
-//        opacity: 0;
-//        //transform: rotate(180deg);
-//    }
-//
-//    100% {
-//        //transform: scale(1);
-//        opacity: 1;
-//        transform: rotate(360deg);
-//    }
-//}
+
+
+.modal--auth {
+    position: fixed;
+    bottom: -100%;
+    padding: 20px 16px;
+    background-color: #fff;
+    width: 100%;
+    z-index: -1;
+    opacity: 0;
+    visibility: hidden;
+    transition: all ease-out .45s;
+
+    .btn-close {
+        display: block;
+        margin-right: 0;
+        margin-bottom: 12px;
+        margin-left: auto;
+    }
+
+    .modal__title {
+        margin-bottom: 32px;
+        font-weight: 600;
+        font-size: 14px;
+        line-height: 19px;
+        text-align: center;
+    }
+
+    .btn-login {
+        margin-bottom: 20px;
+        padding: 10px;
+    }
+
+    .btn-register {
+        font-weight: 600;
+        font-size: 14px;
+    }
+
+    &.active {
+        z-index: 1001;
+        bottom: 0;
+        opacity: 1;
+        visibility: visible;
+        transition: all ease-in .65s;
+    }
+}
+
+.modal--partners {
+    padding: 20px;
+    max-width: 440px;
+    width: 100%;
+
+    .modal__title {
+        font-weight: 600;
+        font-size: 18px;
+        line-height: 25px;
+    }
+
+    .form__description {
+        margin-bottom: 30px;
+        font-size: 14px;
+        line-height: 150%;
+        color: $colorSecondary;
+    }
+
+    .label {
+        font-size: 14px;
+        line-height: 19px;
+        color: $colorSecondary;
+    }
+}
