--- a/src/scss/shop/main.scss
+++ b/src/scss/shop/main.scss
@@ -7,7 +7,8 @@
 @import './pages/CatalogPage.scss';
 @import './pages/SingleProductPage.scss';
 
-.shop {
+.shop,
+.admin {
 
     .header {
         position: relative;
