add registration page

--- a/src/scss/account/pages/loginPage.scss
+++ b/src/scss/account/pages/loginPage.scss
@@ -13,6 +13,12 @@
   text-align: center;
 }
 
+.login__subtitle {
+  margin-bottom: 32px;
+  font-size: 14px;
+  line-height: 150%;
+}
+
 .login__form {
   .input-wrapper {
     margin-bottom: 32px;
