--- a/src/scss/shop/pages/CatalogPage.scss
+++ b/src/scss/shop/pages/CatalogPage.scss
@@ -292,7 +292,7 @@
     margin-bottom: 40px;
     padding: 12px;
     width: 244px;
-    height: 324px;
+    //height: 324px;
     transition: all ease-in-out .25s;
 
 
