--- a/src/scss/shop/pages/SingleProductPage.scss
+++ b/src/scss/shop/pages/SingleProductPage.scss
@@ -4,12 +4,19 @@
         margin-bottom: 40px;
     }
 
+    .recommended__product-list {
+        display: block;
+        height: auto;
+    }
 
     @media screen and(max-width: 768px) {
         .recommended__product-list {
-            flex-direction: row;
             max-height: unset;
-            height: 470px;
+            height: auto;
+        }
+
+        .flickity-button {
+            display: none;
         }
     }
 }
@@ -200,7 +207,30 @@
 
             .hero__main-slider {
                 margin-bottom: 20px;
+
+                .item.active {
+                    position: fixed !important;
+                    top: -100px;
+                    //left: 0 !important;
+                    width: 100vw;
+                    height: 100vh;
+                    object-fit: cover;
+                    object-position: center;
+                    background-color: #fff;
+                    transition: all ease-in-out 0.5s;
+                    z-index: 100;
+
+                    img {
+                        height: 100%;
+                    }
+                }
             }
+        }
+
+        .product-preview__controls {
+            position: fixed;
+            top: 87%;
+            background-color: #fff;
         }
 
         .hero__description {
@@ -345,6 +375,8 @@
         .probe__description {
             margin-left: 16px;
             margin-right: 16px;
+            padding-top: 16px;
+            padding-bottom: 16px;
             max-width: 1000%;
             width: calc(100% + 32px);
         }
@@ -417,71 +449,6 @@
                     width: 100%;
                 }
             }
-        }
-    }
-}
-
-.card--small {
-    display: flex;
-    padding-top: 12px;
-    padding-bottom: 12px;
-
-    .card__preview {
-        margin-right: 20px;
-        padding: 44px 13px;
-    }
-
-    .card__body {
-        width: 278px;
-    }
-
-    .card__title {
-        margin-bottom: 6px;
-        font-size: 20px;
-        line-height: 27px;
-        color: #231D18;
-    }
-
-    .card__subtitle {
-        margin-bottom: 14px;
-        font-size: 14px;
-        line-height: 19px;
-        color: #3B4857;
-    }
-
-    .card__price {
-        margin-bottom: 40px;
-        font-weight: 600;
-        font-size: 18px;
-        line-height: 25px;
-
-        .previous {
-            padding-left: 12px;
-            font-size: 14px;
-            line-height: 19px;
-            color: #5F6E80;
-            text-decoration: line-through;
-        }
-    }
-
-    .card__actions {
-        display: flex;
-
-        .quantity-group {
-            margin-top: 0;
-            margin-right: 22px;
-            width: 122px;
-        }
-
-        button, input {
-            height: 46px;
-        }
-
-        .btn-dark {
-            width: 140px;
-            font-size: 16px;
-            font-weight: bold;
-            line-height: 22px;
         }
     }
 }
