--- a/src/scss/sections/header.scss
+++ b/src/scss/sections/header.scss
@@ -1,7 +1,7 @@
 .header {
     position: absolute;
     top: 0;
-    margin-top: 16px;
+    //margin-top: 16px;
     padding: 16px 0;
     width: 100%;
     z-index: 3;
