--- a/src/scss/shop/sections/header.scss
+++ b/src/scss/shop/sections/header.scss
@@ -22,6 +22,7 @@
             padding-left: 43px;
             font-size: 16px;
             line-height: 19px;
+            background-color: transparent;
             border-radius: 0;
         }
 
