--- a/src/scss/shop/sections/invite.scss
+++ b/src/scss/shop/sections/invite.scss
@@ -4,9 +4,9 @@
 
     @media screen and(max-width: 768px) {
         .slide__preview {
-            margin-left: calc(50% - 50vw);
-            margin-right: calc(50% - 50vw);
-            max-width: 1000%;
+            //margin-left: calc(50% - 50vw);
+            //margin-right: calc(50% - 50vw);
+            max-width: 100%;
             width: auto;
         }
     }
