--- a/src/scss/components/index.scss
+++ b/src/scss/components/index.scss
@@ -15,6 +15,7 @@
 @import './range-slider.scss';
 @import './feedback.scss';
 @import './tooltip.scss';
+@import './notifications';
 
 /* Blog */
 @import './blog.scss';
