--- a/src/scss/components/modals.scss
+++ b/src/scss/components/modals.scss
@@ -243,6 +243,10 @@
         margin: 0 auto;
 
     }
+    
+    @media screen and(min-width: 1024px) and(max-width: 1440px) {
+        top: 45%;
+    }
 }
 
 .modal--cart,
@@ -463,5 +467,131 @@
         font-size: 14px;
         line-height: 19px;
         color: $colorSecondary;
+    }
+}
+
+.modal--add-address {
+    .modal__head {
+        margin-bottom: 20px;
+        display: flex;
+        justify-content: space-between;
+        align-items: center;
+
+        .btn-close {
+            margin-right: 0;
+        }
+    }
+
+    .input-group {
+        max-width: 630px;
+    }
+
+    .modal__footer {
+        display: flex;
+    }
+
+
+    .toggle-wrapper {
+        display: flex;
+        margin-bottom: 32px;
+
+        .label {
+            margin-right: 20px;
+            display: flex;
+            align-items: center;
+            justify-content: center;
+        }
+
+        .label-wrapper {
+            position: relative;
+            display: flex;
+            width: 60px;
+            height: 34px;
+        }
+
+         input {
+            opacity: 0;
+            width: 0;
+            height: 0;
+        }
+
+        .slider {
+            position: absolute;
+            cursor: pointer;
+            top: 0;
+            left: 0;
+            right: 0;
+            bottom: 0;
+            background-color: $colorBrownLighten;
+            -webkit-transition: .4s;
+            transition: .4s;
+        }
+
+        .slider:before {
+            position: absolute;
+            content: "";
+            height: 26px;
+            width: 26px;
+            left: 4px;
+            bottom: 4px;
+            background-color: white;
+            -webkit-transition: .4s;
+            transition: .4s;
+        }
+
+        input:checked + .slider {
+            background-color: $colorBrownDarken;
+        }
+
+        input:focus + .slider {
+            box-shadow: 0 0 1px #2196F3;
+        }
+
+        input:checked + .slider:before {
+            -webkit-transform: translateX(24px);
+            -ms-transform: translateX(24px);
+            transform: translateX(24px);
+        }
+
+        .slider.round {
+            border-radius: 34px;
+        }
+
+        .slider.round:before {
+            border-radius: 50%;
+        }
+    }
+
+    .modal__footer {
+        input,
+        button {
+            width: 155px;
+            font-size: 14px;
+        }
+    }
+
+    @media screen and(max-width: 992px) {
+        &.active {
+            max-height: calc(100vh - 50px);
+            overflow-y: auto;
+            top: 50%;
+        }
+
+        .city-list {
+            margin-bottom: 20px;
+            .btn-link--underline:not(:last-of-type) {
+                margin-right: 14px;
+            }
+        }
+
+        .modal__footer {
+            flex-direction: column;
+
+            input,
+            button {
+                width: 100%;
+                min-width: 300px;
+            }
+        }
     }
 }
