--- a/src/scss/framework/base.scss
+++ b/src/scss/framework/base.scss
@@ -1,23 +1,7 @@
-* {
-    // cursor: none !important;
-}
-
-body, html {
-    // cursor: none;
-    // height: 100%;
-}
-
 body {
     position: relative;
     font-family: 'Open Sans', sans-serif;
     counter-reset: section;
-
-
-    @media screen and(max-width: 768px) {
-        // overflow: hidden;
-        overflow: scroll;
-        -webkit-overflow-scrolling: touch;
-    }
 }
 
 button {
@@ -25,26 +9,8 @@ button {
     cursor: pointer;
 }
 
-
-/* page transition animation */
-
-.loading-screen {
-    position: relative;
-    padding-left: 0;
-    padding-right: 0;
-    padding-top: 0;
-    background-color: #8d6355;
-    width: 100%;
-    height: 0%;
-}
-
-.load-container {
-    position: fixed;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 100vh;
-    overflow: hidden;
-    z-index: 10;
-    pointer-events: none;
+@media screen and(max-width: 768px) {
+    input {
+        font-size: 16px !important;
+    }
 }
