--- a/src/scss/framework/utils.scss
+++ b/src/scss/framework/utils.scss
@@ -1,97 +1,3 @@
-#cursor {
-    position: fixed;
-    width: 30px;
-    height: 30px;
-    border: 2px solid $colorBrownDarken;
-    border-radius: 50%;
-    top: 0;
-    left: 0;
-    pointer-events: none;
-    transform: translate(-50%, -50%);
-    // transition: .15s;
-    z-index: 1000;
-    mix-blend-mode: difference;
-}
-
-#cursor--small {
-    position: fixed;
-    width: 10px;
-    height: 10px;
-    background-color: $colorBrownDarken;
-    border-radius: 50%;
-    top: -1px;
-    left: -1px;
-    pointer-events: none;
-    transform: translate(-50%, -50%);
-    // transition: .3s;
-    z-index: 1000;
-    mix-blend-mode: difference;
-}
-
-@media screen and(max-width: 768px) {
-    #cursor,
-    #cursor--small {
-        display: none;
-    }
-}
-
-#cursor.expand {
-    opacity: .5;
-    width: 4px;
-    height: 4px;
-    top: 13px;
-    left: 13px;
-    transition: .2s;
-    // animation: cursorAnimSmall .5s;
-}
-
-#cursor--small.expand {
-    opacity: .5;
-    width: 4px;
-    height: 4px;
-    top: 2px;
-    left: 2px;
-    transition: .2s;
-    // animation: cursorAnimSmall;
-}
-
-*:hover ~  #cursor {
-    // background-color: red;
-    opacity: 0;
-    transition: .2s;
-}
-
-*:hover ~ #cursor--small {
-    transform: translate(-50%, -50%);
-    // opacity: 1;
-    transition: .3s;
-    width: 20px;
-    height: 20px;
-    background-color: $colorBrownDarken;
-    // transition-delay: .4s;
-}
-
-@keyframes cursorAnimSmall {
-    0% {
-        width: 3px;
-        height: 3px;
-        transform: translate(0, 0) scale(0.2);
-    }
-
-    25% {
-        width: 7px;
-        height: 7px;
-        // transform: translate(-50%, -50%);
-        transform: translate(0, 0) scale(0.5);
-    }
-
-    100% {
-        width: 25px;
-        height: 25px;
-        // transform: translate(-50%, -50%);
-        transform: translate(0, 0) scale(1);
-    }
-}
 
 #overlay {
     position: fixed;
@@ -165,8 +71,9 @@
     box-shadow: inset 0 0 7px 2px rgba(0, 0, 0, 0.065);
 
     @media screen and(max-width: 768px) {
-        box-shadow: none;
         overflow-x: hidden;
+        box-shadow: none;
+        overflow-y: scroll;
     }
 }
 
@@ -175,8 +82,9 @@
     background: $colorBrownLighten;
 
     @media screen and(max-width: 768px) {
-        background: $colorBrownDarken;
         overflow-x: hidden;
+        background: $colorBrownDarken;
+        overflow-y: scroll;
     }
 }
 
