--- a/src/scss/pages/checkoutPage.scss
+++ b/src/scss/pages/checkoutPage.scss
@@ -1,3 +1,19 @@
+.modal--add-address {
+    position: fixed;
+    padding: 20px;
+    top: 50%;
+    left: 50%;
+    background-color: #fff;
+    transform: translate(-50%, -50%);
+    opacity: 0;
+    transition: ease-out .25s;
+
+    &.active {
+        opacity: 1;
+        z-index: 10;
+        transition: ease-in .25s;
+    }
+}
 
 
 .final__order {
