--- a/src/scss/pages/homePage.scss
+++ b/src/scss/pages/homePage.scss
@@ -88,7 +88,7 @@
 
     @media screen and(max-width: 768px) {
         .flickity-viewport {
-            overflow: visible;
+            //overflow: visible;
         }
 
         .flickity-button {
